# quick-script

./: .dockerignore  .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml
static/: base.html  scripts.js  style.css
