[project]
name = "quick-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "markdown>=3.7",
    "quart>=0.20.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipython>=9.0.1",
]
